--- a/Bug/CSS/typography/bug/style.css
+++ b/Bug/CSS/typography/bug/style.css
@@ -27,3 +27,16 @@ h3 {
 p {
   margin-bottom: 32px;
 }
+
+.fs-base {
+  letter-spacing: -0.015em;
+  line-height: 1.5;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 700;
+  color: rgba(0, 102, 255, 0.5);
+  text-align: left;
+  text-indent: 2%;
+  text-transform: uppercase;
+  text-decoration: line-through;
+  font-style: italic;
+}
