--- a/Bug/CSS/animation/style.css
+++ b/Bug/CSS/animation/style.css
@@ -16,14 +16,59 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 300px;
+  width: 100px;
+  height: 100px;
   border-radius: 5px;
   font-size: 20px;
   font-weight: 500;
   color: #fff;
   background-color: #0066ff;
   animation: move-box 10000ms cubic-bezier(0, 1.58, 1, -0.69) infinite alternate;
+}
+
+.box2 {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #0066ff;
+  animation: move-box2 10000ms cubic-bezier(0, 1.58, 1, -0.69) infinite alternate;
+}
+
+.box3 {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #0066ff;
+  animation: move-box3 10000ms cubic-bezier(0, 1.58, 1, -0.69) infinite alternate;
+}
+
+.box4 {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #0066ff;
+  animation: move-box4 10000ms cubic-bezier(0, 1.58, 1, -0.69) infinite alternate;
 }
 
 @keyframes move-box {
@@ -53,5 +98,93 @@ body {
     background-color: #ffc82c;
     top: 100%;
     left: 100%;
+  }
+}
+
+@keyframes move-box2 {
+  0% {
+    background-color: #0066ff;
+    top: 0;
+    right: 0;
+  }
+  25% {
+    background-color: #0066ff;
+    top: 25%;
+    right: 25%;
+  }
+
+  50% {
+    background-color: #ff4949;
+    top: 50%;
+    right: 50%;
+  }
+  75% {
+    background-color: #0066ff;
+    top: 75%;
+    right: 75%;
+  }
+
+  100% {
+    background-color: #ffc82c;
+    top: 100%;
+    right: 100%;
+  }
+}
+@keyframes move-box3 {
+  0% {
+    background-color: #0066ff;
+    bottom: 0;
+    left: 0;
+  }
+  25% {
+    background-color: #0066ff;
+    bottom: 25%;
+    left: 25%;
+  }
+
+  50% {
+    background-color: #ff4949;
+    bottom: 50%;
+    left: 50%;
+  }
+  75% {
+    background-color: #0066ff;
+    bottom: 75%;
+    left: 75%;
+  }
+
+  100% {
+    background-color: #ffc82c;
+    bottom: 100%;
+    left: 100%;
+  }
+}
+@keyframes move-box4 {
+  0% {
+    background-color: #0066ff;
+    bottom: 0;
+    right: 0;
+  }
+  25% {
+    background-color: #0066ff;
+    bottom: 25%;
+    right: 25%;
+  }
+
+  50% {
+    background-color: #ff4949;
+    bottom: 50%;
+    right: 50%;
+  }
+  75% {
+    background-color: #0066ff;
+    bottom: 75%;
+    right: 75%;
+  }
+
+  100% {
+    background-color: #ffc82c;
+    bottom: 100%;
+    right: 100%;
   }
 }
